--- a/.github/workflows/run_all_scripts.yml
+++ b/.github/workflows/run_all_scripts.yml
@@ -1,5 +1,3 @@
-# .github/workflows/run_all_scripts.yml
-
 name: 自动测试所有小脚本喵~ 🐾
 
 on:
@@ -28,9 +26,9 @@ jobs:
       - name: 看看 scripts 文件夹里都有谁喵...
         id: set-matrix
         run: |
-          # 找到所有 .sh 文件，然后把它们变成一个 JSON 数组给小本本用喵
-          # 如果一个脚本都找不到，也不会报错的喵，只会给一个空列表喵~
-          scripts=$(ls -1 scripts/*.sh 2>/dev/null | jq -R . | jq -s .)
+          # 找到所有 .sh 文件，然后把它们变成一个紧凑的 JSON 数组给小本本用喵
+          # 使用 jq -c 可以生成没有换行符的单行 JSON，这样就不会出错了喵~
+          scripts=$(ls -1 scripts/*.sh 2>/dev/null | jq -R . | jq -s -c .)
           echo "发现的脚本有: $scripts 喵"
           echo "scripts=$scripts" >> $GITHUB_OUTPUT
 
@@ -38,12 +36,12 @@ jobs:
   run-scripts:
     # 需要等侦察兵工作完成才能开始喵
     needs: discover-scripts
-    
+
     # 如果侦察兵没找到任何脚本，这个工作就不会运行了喵
     if: needs.discover-scripts.outputs.script_matrix != '[]'
 
     name: 正在努力执行 -> ${{ matrix.script_name }} 喵! 🚀
-    
+
     # 一个脚本出错了，其他的也要继续加油干喵！
     continue-on-error: true
 
