更新 supervisord.conf

--- a/space/openlist/supervisord.conf
+++ b/space/openlist/supervisord.conf
@@ -1,16 +1,14 @@
 [supervisord]
 nodaemon=true
-logfile=/tmp/supervisord.log
-pidfile=/tmp/supervisord.pid
+logfile=/var/log/supervisor/supervisord.log
+pidfile=/var/run/supervisord.pid
+user=appuser ; <-- 新增：指定 Supervisord 自身以 appuser 运行
 
 [program:openlist]
-# 使用新的启动命令
 command=openlist server
-# 在 appuser 的主目录下运行
 directory=/home/appuser
 autostart=true
 autorestart=true
-# 仍然使用非 root 用户运行，更安全
 user=appuser
 redirect_stderr=true
 stdout_logfile=/dev/stdout
@@ -31,8 +29,7 @@ command=/opt/frpc/frpc -u %(ENV_FRPC_SECRET_KEY)s -p 201696
 directory=/opt/frpc
 autostart=true
 autorestart=true
-# frpc 仍然以 root 运行，确保网络权限
-user=root
+user=appuser ; <-- 关键改动：frpc 也必须以 appuser 运行
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
