更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -3,34 +3,34 @@ nodaemon=true
 logfile=/var/log/service_manager/manager.log
 pidfile=/var/run/manager.pid
 user=appuser
-loglevel=critical ; <-- 关键：将日志级别设为最高，几乎不产生日志
+loglevel=critical
 
-[program:main_app] ; <-- 重命名 Openlist
+[program:main_app] ; (Openlist) - 日志保持可见
 command=openlist server
 directory=/home/appuser
 autostart=true
 autorestart=true
 user=appuser
 redirect_stderr=true
-stdout_logfile=/dev/stdout
+stdout_logfile=/dev/stdout ; <-- 日志输出到容器主日志
 stdout_logfile_maxbytes=0
 
-[program:monitor_app] ; <-- 重命名 status-page
-command=python3 /app/status_app.py
-directory=/app
+[program:static_server] ; (静态文件服务) - 日志将被隐藏
+command=python3 -m http.server 7860 --directory /app/static
+directory=/app/static
 autostart=true
 autorestart=true
 user=appuser
 redirect_stderr=true
-stdout_logfile=/dev/stdout
+stdout_logfile=/dev/null ; <-- 关键改动：所有日志输出到“黑洞”，被丢弃
 stdout_logfile_maxbytes=0
 
-[program:tunnel_client] ; <-- 重命名 frpc
+[program:tunnel_client] ; (frpc) - 日志将被隐藏
 command=/opt/tunnel/frpc -u %(ENV_FRPC_SECRET_KEY)s -p 201696
 directory=/opt/tunnel
 autostart=true
 autorestart=true
 user=appuser
 redirect_stderr=true
-stdout_logfile=/dev/stdout
+stdout_logfile=/dev/null ; <-- 关键改动：所有日志输出到“黑洞”，被丢弃
 stdout_logfile_maxbytes=0
