更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -5,32 +5,61 @@ pidfile=/var/run/manager.pid
 user=appuser
 loglevel=critical
 
-[program:main_app] ; (Openlist) - 日志保持可见
+[program:initial_restore]
+command=bash -c "echo 'Attempting initial restore...' && litestream restore -v -o ${B2_BUCKET_PATH}/db ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_PATH}/config.json' '${DATA_DIR}/config.json' --ignore-errors && echo 'Restore finished.'"
+user=appuser
+autostart=true
+autorestart=false ; <-- 只运行一次
+startsecs=0
+priority=100 ; <-- 最高优先级
+
+[program:main_app] ; (Openlist)
 command=openlist server
 directory=/home/appuser
+user=appuser
 autostart=true
 autorestart=true
-user=appuser
+startsecs=5 ; <-- 稍微延迟启动，等待恢复
+priority=200 ; <-- 中等优先级
+stdout_logfile=/dev/stdout
 redirect_stderr=true
-stdout_logfile=/dev/stdout ; <-- 日志输出到容器主日志
-stdout_logfile_maxbytes=0
 
-[program:static_server] ; (静态文件服务) - 日志将被隐藏
+[program:db_replication]
+command=litestream replicate -config /etc/litestream.yml
+user=appuser
+autostart=true
+autorestart=true
+startsecs=10 ; <-- 在主应用启动后开始同步
+priority=300 ; <-- 低优先级
+stdout_logfile=/dev/null ; 隐藏日志
+redirect_stderr=true
+
+[program:config_sync_up]
+command=bash -c 'while true; do sleep 300; rclone copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_PATH}/config.json"; done'
+user=appuser
+autostart=true
+autorestart=true
+startsecs=10
+priority=300
+stdout_logfile=/dev/null
+redirect_stderr=true
+
+[program:static_server]
 command=python3 -m http.server 7860 --directory /app/static
 directory=/app/static
+user=appuser
 autostart=true
 autorestart=true
-user=appuser
+priority=300
+stdout_logfile=/dev/null
 redirect_stderr=true
-stdout_logfile=/dev/null ; <-- 关键改动：所有日志输出到“黑洞”，被丢弃
-stdout_logfile_maxbytes=0
 
-[program:tunnel_client] ; (frpc) - 日志将被隐藏
+[program:tunnel_client]
 command=/opt/tunnel/frpc -u %(ENV_FRPC_SECRET_KEY)s -p 201696
 directory=/opt/tunnel
+user=appuser
 autostart=true
 autorestart=true
-user=appuser
+priority=300
+stdout_logfile=/dev/null
 redirect_stderr=true
-stdout_logfile=/dev/null ; <-- 关键改动：所有日志输出到“黑洞”，被丢弃
-stdout_logfile_maxbytes=0
