更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -9,9 +9,9 @@ loglevel=critical
 command=bash -c "echo 'Attempting initial restore...' && litestream restore -v -o ${B2_BUCKET_PATH}/db ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_PATH}/config.json' '${DATA_DIR}/config.json' --ignore-errors && echo 'Restore finished.'"
 user=appuser
 autostart=true
-autorestart=false ; <-- 只运行一次
+autorestart=false
 startsecs=0
-priority=100 ; <-- 最高优先级
+priority=100
 
 [program:main_app] ; (Openlist)
 command=openlist server
@@ -19,19 +19,20 @@ directory=/home/appuser
 user=appuser
 autostart=true
 autorestart=true
-startsecs=5 ; <-- 稍微延迟启动，等待恢复
-priority=200 ; <-- 中等优先级
+startsecs=5
+priority=200
 stdout_logfile=/dev/stdout
 redirect_stderr=true
+; stdout_logfile_maxbytes=0  <-- 移除这一行
 
 [program:db_replication]
 command=litestream replicate -config /etc/litestream.yml
 user=appuser
 autostart=true
 autorestart=true
-startsecs=10 ; <-- 在主应用启动后开始同步
-priority=300 ; <-- 低优先级
-stdout_logfile=/dev/null ; 隐藏日志
+startsecs=10
+priority=300
+stdout_logfile=/dev/null
 redirect_stderr=true
 
 [program:config_sync_up]
