--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -23,26 +23,27 @@ startsecs=5
 priority=200
 stdout_logfile=/dev/stdout
 redirect_stderr=true
-; stdout_logfile_maxbytes=0  <-- 移除这一行
 
 [program:db_replication]
-command=litestream replicate -config /etc/litestream.yml
+# 关键改动：使用包装脚本启动
+command=/usr/local/bin/sync_wrapper.sh litestream replicate -config /etc/litestream.yml
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/dev/null
+stdout_logfile=/dev/stdout ; <-- 关键改动：让 Supervisor 准备好接收日志
 redirect_stderr=true
 
 [program:config_sync_up]
-command=bash -c 'while true; do sleep 300; rclone copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_PATH}/config.json"; done'
+# 关键改动：使用包装脚本启动
+command=/usr/local/bin/sync_wrapper.sh bash -c 'while true; do sleep 300; rclone copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_PATH}/config.json"; done'
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/dev/null
+stdout_logfile=/dev/stdout ; <-- 关键改动：让 Supervisor 准备好接收日志
 redirect_stderr=true
 
 [program:static_server]
