更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -12,6 +12,8 @@ autostart=true
 autorestart=false
 startsecs=0
 priority=100
+stdout_logfile=/dev/stdout ; <-- 新增：显示恢复任务的日志
+redirect_stderr=true
 
 [program:main_app] ; (Openlist)
 command=openlist server
@@ -23,26 +25,25 @@ startsecs=5
 priority=200
 stdout_logfile=/dev/stdout
 redirect_stderr=true
-; stdout_logfile_maxbytes=0  <-- 移除这一行
 
-[program:db_replication]
+[program:db_replication] ; (Litestream)
 command=litestream replicate -config /etc/litestream.yml
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/dev/null
+stdout_logfile=/dev/stdout ; <-- 关键改动：显示日志
 redirect_stderr=true
 
-[program:config_sync_up]
+[program:config_sync_up] ; (rclone)
 command=bash -c 'while true; do sleep 300; rclone copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_PATH}/config.json"; done'
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/dev/null
+stdout_logfile=/dev/stdout ; <-- 关键改动：显示日志
 redirect_stderr=true
 
 [program:static_server]
@@ -52,7 +53,7 @@ user=appuser
 autostart=true
 autorestart=true
 priority=300
-stdout_logfile=/dev/null
+stdout_logfile=/dev/null ; <-- 保持隐藏
 redirect_stderr=true
 
 [program:tunnel_client]
@@ -62,5 +63,5 @@ user=appuser
 autostart=true
 autorestart=true
 priority=300
-stdout_logfile=/dev/null
+stdout_logfile=/dev/null ; <-- 保持隐藏
 redirect_stderr=true
