更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -1,21 +1,31 @@
 [supervisord]
 nodaemon=true
 logfile=/var/log/service_manager/manager.log
-pidfile=/var/run/manager.pid
+pidfile=/var/log/service_manager/manager.pid ; <-- 修正 PID 路径
 user=appuser
 loglevel=critical
 
+[program:log_viewer] ; <-- 新增：统一的日志查看器
+command=tail -f /var/log/service_manager/*.log
+user=appuser
+autostart=true
+autorestart=true
+priority=500 ; <-- 最低优先级
+stdout_logfile=/dev/stdout ; <-- 唯一写入主日志的进程
+redirect_stderr=true
+
 [program:initial_restore]
-command=bash -c "echo 'Attempting initial restore...' && litestream restore -v -o ${B2_BUCKET_PATH}/db ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_PATH}/config.json' '${DATA_DIR}/config.json' --ignore-errors && echo 'Restore finished.'"
+; --- 关键改动：修正 litestream 命令，并增加 -if-replica-exists ---
+command=bash -c "echo 'Attempting initial restore...' && litestream restore -if-replica-exists -config /etc/litestream.yml ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors && echo 'Restore finished.'"
 user=appuser
 autostart=true
 autorestart=false
 startsecs=0
-priority=100
-stdout_logfile=/dev/stdout ; <-- 新增：显示恢复任务的日志
+priority=100 ; <-- 最高优先级
+stdout_logfile=/var/log/service_manager/restore.log
 redirect_stderr=true
 
-[program:main_app] ; (Openlist)
+[program:main_app]
 command=openlist server
 directory=/home/appuser
 user=appuser
@@ -23,27 +33,27 @@ autostart=true
 autorestart=true
 startsecs=5
 priority=200
-stdout_logfile=/dev/stdout
+stdout_logfile=/var/log/service_manager/main_app.log
 redirect_stderr=true
 
-[program:db_replication] ; (Litestream)
+[program:db_replication]
 command=litestream replicate -config /etc/litestream.yml
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/dev/stdout ; <-- 关键改动：显示日志
+stdout_logfile=/var/log/service_manager/db_replication.log
 redirect_stderr=true
 
-[program:config_sync_up] ; (rclone)
-command=bash -c 'while true; do sleep 300; rclone copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_PATH}/config.json"; done'
+[program:config_sync_up]
+command=bash -c 'while true; do sleep 300; rclone copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json"; done'
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/dev/stdout ; <-- 关键改动：显示日志
+stdout_logfile=/var/log/service_manager/config_sync.log
 redirect_stderr=true
 
 [program:static_server]
@@ -53,7 +63,7 @@ user=appuser
 autostart=true
 autorestart=true
 priority=300
-stdout_logfile=/dev/null ; <-- 保持隐藏
+stdout_logfile=/dev/null
 redirect_stderr=true
 
 [program:tunnel_client]
@@ -63,5 +73,5 @@ user=appuser
 autostart=true
 autorestart=true
 priority=300
-stdout_logfile=/dev/null ; <-- 保持隐藏
+stdout_logfile=/dev/null
 redirect_stderr=true
