更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -1,27 +1,17 @@
 [supervisord]
 nodaemon=true
 logfile=/var/log/service_manager/manager.log
-pidfile=/var/log/service_manager/manager.pid ; <-- 修正 PID 路径
+pidfile=/var/log/service_manager/manager.pid
 user=appuser
 loglevel=critical
 
-[program:log_viewer] ; <-- 新增：统一的日志查看器
-command=tail -f /var/log/service_manager/*.log
-user=appuser
-autostart=true
-autorestart=true
-priority=500 ; <-- 最低优先级
-stdout_logfile=/dev/stdout ; <-- 唯一写入主日志的进程
-redirect_stderr=true
-
 [program:initial_restore]
-; --- 关键改动：修正 litestream 命令，并增加 -if-replica-exists ---
 command=bash -c "echo 'Attempting initial restore...' && litestream restore -if-replica-exists -config /etc/litestream.yml ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors && echo 'Restore finished.'"
 user=appuser
 autostart=true
 autorestart=false
 startsecs=0
-priority=100 ; <-- 最高优先级
+priority=100
 stdout_logfile=/var/log/service_manager/restore.log
 redirect_stderr=true
 
