--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -6,16 +6,16 @@ user=appuser
 loglevel=critical
 
 [program:initial_restore]
-command=bash -c "echo 'Attempting initial restore...' && litestream restore -if-replica-exists -config /etc/litestream.yml ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors && echo 'Restore finished.'"
+command=bash -c "litestream restore -if-replica-exists -config /etc/litestream.yml ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors"
 user=appuser
 autostart=true
 autorestart=false
 startsecs=0
 priority=100
-stdout_logfile=/var/log/service_manager/restore.log
+stdout_logfile=/dev/null ; <-- 隐藏日志
 redirect_stderr=true
 
-[program:main_app]
+[program:main_app] ; (Openlist)
 command=openlist server
 directory=/home/appuser
 user=appuser
@@ -23,7 +23,7 @@ autostart=true
 autorestart=true
 startsecs=5
 priority=200
-stdout_logfile=/var/log/service_manager/main_app.log
+stdout_logfile=/var/log/service_manager/main_app.log ; <-- 写入专用日志文件
 redirect_stderr=true
 
 [program:db_replication]
@@ -33,7 +33,7 @@ autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/var/log/service_manager/db_replication.log
+stdout_logfile=/dev/null ; <-- 隐藏日志
 redirect_stderr=true
 
 [program:config_sync_up]
@@ -43,7 +43,7 @@ autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/var/log/service_manager/config_sync.log
+stdout_logfile=/dev/null ; <-- 隐藏日志
 redirect_stderr=true
 
 [program:static_server]
