--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -6,6 +6,7 @@ user=appuser
 loglevel=critical
 
 [program:initial_restore]
+; --- 关键修正：使用正确的 restore 命令 ---
 command=bash -c "litestream restore -if-replica-exists -config /etc/litestream.yml ${DATA_DIR}/data.db && rclone copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors"
 user=appuser
 autostart=true
@@ -15,7 +16,7 @@ priority=100
 stdout_logfile=/dev/null ; <-- 隐藏日志
 redirect_stderr=true
 
-[program:main_app] ; (Openlist)
+[program:main_app]
 command=openlist server
 directory=/home/appuser
 user=appuser
@@ -23,17 +24,17 @@ autostart=true
 autorestart=true
 startsecs=5
 priority=200
-stdout_logfile=/var/log/service_manager/main_app.log ; <-- 写入专用日志文件
+stdout_logfile=/dev/null ; <-- 隐藏日志
 redirect_stderr=true
 
-[program:db_replication]
+[program:db_replication] ; (Litestream)
 command=litestream replicate -config /etc/litestream.yml
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/dev/null ; <-- 隐藏日志
+stdout_logfile=/var/log/service_manager/litestream.log ; <-- 关键：只将 Litestream 日志写入专用文件
 redirect_stderr=true
 
 [program:config_sync_up]
