--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -5,25 +5,63 @@ pidfile=/var/log/service_manager/manager.pid
 user=appuser
 loglevel=critical
 
-[program:credential_test]
-; --- 唯一的命令：用 rclone 列出 B2 存储桶的内容来测试凭据 ---
-command=bash -c "echo '--- Running Rclone Credential Test ---' && rclone ls 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}' --config /home/appuser/.config/rclone/rclone.conf && echo '--- Rclone Test Finished ---'"
+[program:initial_restore]
+command=bash -c "litestream restore -if-replica-exists -config /etc/litestream.yml ${DATA_DIR}/data.db && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors"
 user=appuser
 autostart=true
 autorestart=false
 startsecs=0
 priority=100
-stdout_logfile=/var/log/service_manager/litestream.log ; <-- 复用这个日志文件来输出结果
+stdout_logfile=/dev/null
 redirect_stderr=true
 
-; --- 暂时禁用所有其他服务 ---
-; [program:main_app]
-; ...
-; [program:db_replication]
-; ...
-; [program:config_sync_up]
-; ...
-; [program:static_server]
-; ...
-; [program:tunnel_client]
-; ...
+[program:main_app]
+command=openlist server
+directory=/home/appuser
+user=appuser
+autostart=true
+autorestart=true
+startsecs=5
+priority=200
+stdout_logfile=/dev/null
+redirect_stderr=true
+
+[program:db_replication]
+command=litestream replicate -config /etc/litestream.yml
+user=appuser
+autostart=true
+autorestart=true
+startsecs=10
+priority=300
+stdout_logfile=/var/log/service_manager/litestream.log
+redirect_stderr=true
+
+[program:config_sync_up]
+command=bash -c 'while true; do sleep 300; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json"; done'
+user=appuser
+autostart=true
+autorestart=true
+startsecs=10
+priority=300
+stdout_logfile=/dev/null
+redirect_stderr=true
+
+[program:static_server]
+command=python3 -m http.server 7860 --directory /app/static
+directory=/app/static
+user=appuser
+autostautostart=true
+autorestart=true
+priority=300
+stdout_logfile=/dev/null
+redirect_stderr=true
+
+[program:tunnel_client]
+command=/opt/tunnel/frpc -u %(ENV_FRPC_SECRET_KEY)s -p 201696
+directory=/opt/tunnel
+user=appuser
+autostart=true
+autorestart=true
+priority=300
+stdout_logfile=/dev/null
+redirect_stderr=true
