更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -6,7 +6,8 @@ user=appuser
 loglevel=critical
 
 [program:initial_restore]
-command=bash -c "echo 'Attempting initial restore...' && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/db_backup.db' '/home/appuser/backup/db_backup.db' --ignore-errors && ([ -f /home/appuser/backup/db_backup.db ] && cp /home/appuser/backup/db_backup.db ${DATA_DIR}/data.db || echo 'No remote DB backup found, skipping.') && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors"
+; --- 新增了对 config.yaml 的恢复 ---
+command=bash -c "echo 'Attempting initial restore...' && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/db_backup.db' '/home/appuser/backup/db_backup.db' --ignore-errors && ([ -f /home/appuser/backup/db_backup.db ] && cp /home/appuser/backup/db_backup.db ${DATA_DIR}/data.db || echo 'No remote DB backup found, skipping.') && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.yaml' '${DATA_DIR}/config.yaml' --ignore-errors"
 user=appuser
 autostart=true
 autorestart=false
@@ -27,14 +28,14 @@ stdout_logfile=/dev/null
 redirect_stderr=true
 
 [program:backup_sync]
-; --- 关键改动：使用 sqlite3 .backup 创建安全备份，然后用 rclone 上传 ---
-command=bash -c 'while true; do echo "Creating DB snapshot..."; sqlite3 ${DATA_DIR}/data.db ".backup '\''/home/appuser/backup/db_backup.db'\''"; echo "Uploading DB snapshot and config.json..."; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/backup/db_backup.db" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/db_backup.db"; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json"; echo "Upload complete. Waiting for next cycle..."; sleep 300; done'
+; --- 新增了对 config.yaml 的上传 ---
+command=bash -c 'while true; do echo "Creating DB snapshot..."; sqlite3 ${DATA_DIR}/data.db ".backup '\''/home/appuser/backup/db_backup.db'\''"; echo "Uploading DB snapshot, config.json, and config.yaml..."; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/backup/db_backup.db" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/db_backup.db"; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json"; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "${DATA_DIR}/config.yaml" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.yaml"; echo "Upload complete. Waiting for next cycle..."; sleep 300; done'
 user=appuser
 autostart=true
 autorestart=true
 startsecs=10
 priority=300
-stdout_logfile=/var/log/service_manager/backup_sync.log ; <-- 唯一的日志输出
+stdout_logfile=/var/log/service_manager/backup_sync.log
 redirect_stderr=true
 
 [program:static_server]
