更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -6,8 +6,7 @@ user=appuser
 loglevel=critical
 
 [program:initial_restore]
-; --- 新增了对 config.yaml 的恢复 ---
-command=bash -c "echo 'Attempting initial restore...' && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/db_backup.db' '/home/appuser/backup/db_backup.db' --ignore-errors && ([ -f /home/appuser/backup/db_backup.db ] && cp /home/appuser/backup/db_backup.db ${DATA_DIR}/data.db || echo 'No remote DB backup found, skipping.') && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json' '${DATA_DIR}/config.json' --ignore-errors && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.yaml' '${DATA_DIR}/config.yaml' --ignore-errors"
+command=bash -c "rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:%(ENV_B2_BUCKET_NAME)s/%(ENV_B2_PATH_PREFIX)s/db_backup.db' '/home/appuser/backup/db_backup.db' --ignore-errors && ([ -f /home/appuser/backup/db_backup.db ] && cp /home/appuser/backup/db_backup.db /home/appuser/data/data.db || echo 'No remote DB backup found, skipping.') && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:%(ENV_B2_BUCKET_NAME)s/%(ENV_B2_PATH_PREFIX)s/config.json' '/home/appuser/data/config.json' --ignore-errors && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:%(ENV_B2_BUCKET_NAME)s/%(ENV_B2_PATH_PREFIX)s/config.yaml' '/home/appuser/data/config.yaml' --ignore-errors"
 user=appuser
 autostart=true
 autorestart=false
@@ -28,8 +27,7 @@ stdout_logfile=/dev/null
 redirect_stderr=true
 
 [program:backup_sync]
-; --- 新增了对 config.yaml 的上传 ---
-command=bash -c 'while true; do echo "Creating DB snapshot..."; sqlite3 ${DATA_DIR}/data.db ".backup '\''/home/appuser/backup/db_backup.db'\''"; echo "Uploading DB snapshot, config.json, and config.yaml..."; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/backup/db_backup.db" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/db_backup.db"; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "${DATA_DIR}/config.json" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.json"; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "${DATA_DIR}/config.yaml" "b2:${B2_BUCKET_NAME}/${B2_PATH_PREFIX}/config.yaml"; echo "Upload complete. Waiting for next cycle..."; sleep 300; done'
+command=bash -c 'while true; do sqlite3 /home/appuser/data/data.db ".backup \"/home/appuser/backup/db_backup.db\""; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/backup/db_backup.db" "b2:%(ENV_B2_BUCKET_NAME)s/%(ENV_B2_PATH_PREFIX)s/db_backup.db" || echo "Backup failed"; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/data/config.json" "b2:%(ENV_B2_BUCKET_NAME)s/%(ENV_B2_PATH_PREFIX)s/config.json" || echo "Config.json backup failed"; rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/data/config.yaml" "b2:%(ENV_B2_BUCKET_NAME)s/%(ENV_B2_PATH_PREFIX)s/config.yaml" || echo "Config.yaml backup failed"; sleep 300; done'
 user=appuser
 autostart=true
 autorestart=true
