--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -6,7 +6,7 @@ user=appuser
 loglevel=critical
 
 [program:initial_restore]
-command=bash -c "rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:%(ENV_B2_PATH_PREFIX)s/db_backup.db' '/home/appuser/backup/db_backup.db' --ignore-errors && ([ -f /home/appuser/backup/db_backup.db ] && cp /home/appuser/backup/db_backup.db /home/appuser/data/data.db || echo 'No remote DB backup found, skipping.') && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:%(ENV_B2_PATH_PREFIX)s/config.json' '/home/appuser/data/config.json' --ignore-errors && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'b2:%(ENV_B2_PATH_PREFIX)s/config.yaml' '/home/appuser/data/config.yaml' --ignore-errors"
+command=bash -c "rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'webdav:%(ENV_WEBDAV_PATH)s/db_backup.db' '/home/appuser/backup/db_backup.db' --ignore-errors && ([ -f /home/appuser/backup/db_backup.db ] && cp /home/appuser/backup/db_backup.db /home/appuser/data/data.db || echo 'No remote DB backup found, skipping.') && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'webdav:%(ENV_WEBDAV_PATH)s/config.json' '/home/appuser/data/config.json' --ignore-errors && rclone --config /home/appuser/.config/rclone/rclone.conf copyto 'webdav:%(ENV_WEBDAV_PATH)s/config.yaml' '/home/appuser/data/config.yaml' --ignore-errors"
 user=appuser
 autostart=true
 autorestart=false
@@ -27,7 +27,7 @@ stdout_logfile=/dev/null
 redirect_stderr=true
 
 [program:backup_sync]
-command=bash -c 'while true; do sqlite3 /home/appuser/data/data.db ".backup \"/home/appuser/backup/db_backup.db\"" || echo "DB backup failed"; [ -f "/home/appuser/backup/db_backup.db" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/backup/db_backup.db" "b2:%(ENV_B2_PATH_PREFIX)s/db_backup.db" || echo "DB upload failed") || echo "No db_backup.db"; [ -f "/home/appuser/data/config.json" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/data/config.json" "b2:%(ENV_B2_PATH_PREFIX)s/config.json" || echo "Config.json upload failed") || echo "No config.json"; [ -f "/home/appuser/data/config.yaml" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/data/config.yaml" "b2:%(ENV_B2_PATH_PREFIX)s/config.yaml" || echo "Config.yaml upload failed") || echo "No config.yaml"; sleep 300; done'
+command=bash -c 'while true; do sqlite3 /home/appuser/data/data.db ".backup \"/home/appuser/backup/db_backup.db\"" || echo "DB backup failed"; [ -f "/home/appuser/backup/db_backup.db" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/backup/db_backup.db" "webdav:%(ENV_WEBDAV_PATH)s/db_backup.db" || echo "DB upload failed") || echo "No db_backup.db"; [ -f "/home/appuser/data/config.json" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/data/config.json" "webdav:%(ENV_WEBDAV_PATH)s/config.json" || echo "Config.json upload failed") || echo "No config.json"; [ -f "/home/appuser/data/config.yaml" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf copyto "/home/appuser/data/config.yaml" "webdav:%(ENV_WEBDAV_PATH)s/config.yaml" || echo "Config.yaml upload failed") || echo "No config.yaml"; sleep 300; done'
 user=appuser
 autostart=true
 autorestart=true
