--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -1,57 +1,36 @@
 [supervisord]
 nodaemon=true
 logfile=/var/log/service_manager/manager.log
-pidfile=/var/log/service_manager/manager.pid
+pidfile=/var/run/manager.pid
 user=appuser
 loglevel=critical
 
-[program:initial_restore]
-command=bash -c "rclone --config /home/appuser/.config/rclone/rclone.conf --verbose copyto 'webdav:%(ENV_WEBDAV_PATH)s/db_backup.db' '/home/appuser/backup/db_backup.db' --ignore-errors && ([ -f /home/appuser/backup/db_backup.db ] && cp /home/appuser/backup/db_backup.db /home/appuser/data/data.db || echo 'No remote DB backup found, skipping.') && rclone --config /home/appuser/.config/rclone/rclone.conf --verbose copyto 'webdav:%(ENV_WEBDAV_PATH)s/config.json' '/home/appuser/data/config.json' --ignore-errors && rclone --config /home/appuser/.config/rclone/rclone.conf --verbose copyto 'webdav:%(ENV_WEBDAV_PATH)s/config.yaml' '/home/appuser/data/config.yaml' --ignore-errors"
-user=appuser
-autostart=true
-autorestart=false
-startsecs=0
-priority=100
-stdout_logfile=/dev/null
-redirect_stderr=true
-
-[program:main_app]
+[program:main_app] ; (Openlist) - 日志保持可见
 command=openlist server
 directory=/home/appuser
-user=appuser
 autostart=true
 autorestart=true
-startsecs=5
-priority=200
-stdout_logfile=/dev/null
-redirect_stderr=true
-
-[program:backup_sync]
-command=bash -c 'while true; do sqlite3 /home/appuser/data/data.db ".backup \"/home/appuser/backup/db_backup.db\"" || echo "DB backup failed"; [ -f "/home/appuser/backup/db_backup.db" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf --verbose copyto "/home/appuser/backup/db_backup.db" "webdav:%(ENV_WEBDAV_PATH)s/db_backup.db" || echo "DB upload failed") || echo "No db_backup.db"; [ -f "/home/appuser/data/config.json" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf --verbose copyto "/home/appuser/data/config.json" "webdav:%(ENV_WEBDAV_PATH)s/config.json" || echo "Config.json upload failed") || echo "No config.json"; [ -f "/home/appuser/data/config.yaml" ] && (rclone --config /home/appuser/.config/rclone/rclone.conf --verbose copyto "/home/appuser/data/config.yaml" "webdav:%(ENV_WEBDAV_PATH)s/config.yaml" || echo "Config.yaml upload failed") || echo "No config.yaml"; sleep 300; done'
 user=appuser
-autostart=true
-autorestart=true
-startsecs=10
-priority=300
-stdout_logfile=/var/log/service_manager/backup_sync.log
 redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 
-[program:static_server]
+[program:static_server] ; (静态文件服务) - 日志将被隐藏
 command=python3 -m http.server 7860 --directory /app/static
 directory=/app/static
-user=appuser
 autostart=true
 autorestart=true
-priority=300
-stdout_logfile=/dev/null
+user=appuser
 redirect_stderr=true
+stdout_logfile=/dev/null
+stdout_logfile_maxbytes=0
 
-[program:tunnel_client]
+[program:tunnel_client] ; (frpc) - 日志将被隐藏
 command=/opt/tunnel/frpc -u %(ENV_FRPC_SECRET_KEY)s -p 201696
 directory=/opt/tunnel
-user=appuser
 autostart=true
 autorestart=true
-priority=300
-stdout_logfile=/dev/null
+user=appuser
 redirect_stderr=true
+stdout_logfile=/dev/null
+stdout_logfile_maxbytes=0
