更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -6,7 +6,9 @@ user=appuser
 loglevel=critical
 
 [program:main_app] ; (Openlist) - 日志保持可见
-command=openlist server
+# --- 关键改动在这里 ---
+# 这个命令首先检查 OPLIST_CONFIG 变量是否存在，如果存在就写入文件，然后用 exec 启动 openlist
+command=bash -c 'if [ -n "$$OPLIST_CONFIG" ]; then echo "$$OPLIST_CONFIG" > /home/appuser/data/config.json; fi && exec openlist server'
 directory=/home/appuser
 autostart=true
 autorestart=true
@@ -15,7 +17,7 @@ redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
-[program:static_server] ; (静态文件服务) - 日志将被隐藏
+[program:static_server] ; (静态文件服务) - 日日志将被隐藏
 command=python3 -m http.server 7860 --directory /app/static
 directory=/app/static
 autostart=true
