--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -1,13 +1,13 @@
 [supervisord]
 nodaemon=true
-# --- 关键改动：将 logfile 和 pidfile 移至 /tmp 目录 ---
 logfile=/tmp/manager.log
 pidfile=/tmp/manager.pid
 user=appuser
 loglevel=critical
 
 [program:main_app] ; (Openlist) - 日志保持可见
-command=bash -c 'if [ -n "$$OPLIST_CONFIG" ]; then echo "$$OPLIST_CONFIG" > /home/appuser/data/config.json; fi && exec openlist server'
+# --- 关键改动：使用 Supervisord 的官方环境变量语法 ---
+command=bash -c 'if [ -n "%(ENV_OPLIST_CONFIG)s" ]; then echo "%(ENV_OPLIST_CONFIG)s" > /home/appuser/data/config.json; fi && exec openlist server'
 directory=/home/appuser
 autostart=true
 autorestart=true
