更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -6,8 +6,8 @@ user=appuser
 loglevel=critical
 
 [program:main_app] ; (Openlist) - 日志保持可见
-# --- 关键改动：使用 Supervisord 的官方环境变量语法 ---
-command=bash -c 'if [ -n "%(ENV_OPLIST_CONFIG)s" ]; then echo "%(ENV_OPLIST_CONFIG)s" > /home/appuser/data/config.json; fi && exec openlist server'
+# --- 关键改动：使用 printf 代替 echo 来保证引号被完整写入 ---
+command=bash -c 'if [ -n "%(ENV_OPLIST_CONFIG)s" ]; then printf "%s" "%(ENV_OPLIST_CONFIG)s" > /home/appuser/data/config.json; fi && exec openlist server'
 directory=/home/appuser
 autostart=true
 autorestart=true
