--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -5,9 +5,9 @@ pidfile=/tmp/manager.pid
 user=appuser
 loglevel=critical
 
-[program:main_app] ; (Openlist) - 日志保持可见
-# --- 终极改动：使用 %%s 来转义 printf 命令中的 %s ---
-command=bash -c 'if [ -n "%(ENV_OPLIST_CONFIG)s" ]; then printf "%%s" "%(ENV_OPLIST_CONFIG)s" > /home/appuser/data/config.json; fi && exec openlist server'
+[program:main_app] ; (Openlist)
+# 关键改动：使用 envsubst 读取模板，替换变量，生成最终配置，然后启动服务
+command=bash -c 'envsubst < /app/config.template.json > /home/appuser/data/config.json && exec openlist server'
 directory=/home/appuser
 autostart=true
 autorestart=true
@@ -16,7 +16,7 @@ redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
-[program:static_server] ; (静态文件服务) - 日志将被隐藏
+[program:static_server] ; (静态文件服务)
 command=python3 -m http.server 7860 --directory /app/static
 directory=/app/static
 autostart=true
@@ -26,7 +26,7 @@ redirect_stderr=true
 stdout_logfile=/dev/null
 stdout_logfile_maxbytes=0
 
-[program:tunnel_client] ; (frpc) - 日志将被隐藏
+[program:tunnel_client] ; (frpc)
 command=/opt/tunnel/frpc -u %(ENV_FRPC_SECRET_KEY)s -p 201696
 directory=/opt/tunnel
 autostart=true
