更新 proc_config.ini

--- a/space/openlist/proc_config.ini
+++ b/space/openlist/proc_config.ini
@@ -7,7 +7,7 @@ loglevel=critical
 
 [program:main_app] ; (Openlist)
 # 关键改动：使用 envsubst 读取模板，替换变量，生成最终配置，然后启动服务
-command=bash -c 'envsubst < /app/config.template.json > /home/appuser/data/config.json && exec openlist server'
+command=bash -c 'exec openlist server'
 directory=/home/appuser
 autostart=true
 autorestart=true
